fixed a z-index issue and a cascade-delete

--- a/Triptitude.Web/Static/Stylesheets/Site.css
+++ b/Triptitude.Web/Static/Stylesheets/Site.css
@@ -18,6 +18,7 @@ td { vertical-align: top; padding: 0; }
 .clear { clear: both; display: block; height: 0; overflow: hidden; visibility: hidden; width: 0; }
 .placeholder { font-weight: normal !important; color: #666666 !important; }
 input.day-input { width: 30px; }
+.ui-autocomplete { z-index: 10 !important;}
 
 /* Form Defaults */
 input[type="text"] { font-size: 14px; }
